--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.broodcamp</groupId>
-	<artifactId>broodcamp-utils</artifactId>
 	<version>0.0.1</version>
+	<artifactId>broodcamp-utils</artifactId>
 	<packaging>jar</packaging>
-
 	<name>Broodcamp Utils</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>11</java.version>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<broodcamp.version>0.0.1</broodcamp.version>
