--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.broodcamp</groupId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<artifactId>broodcamp-utils</artifactId>
 	<packaging>jar</packaging>
 	<name>Broodcamp Utils</name>
@@ -13,8 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
 		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<broodcamp.version>0.0.1</broodcamp.version>
+		<maven.compiler.target>11</maven.compiler.target>		
 	</properties>
 
 	<dependencies>
